examples/test/testpolicy17267.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17267
  namespace: namespace309
spec:
  podSelector:
    matchLabels:
      key46: value47
      key19: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value15
          key17: value6
          key30: value17
      podSelector:
        matchLabels:
          key46: value37
          key14: value5
          key0: value17
